<resources>
    <string name="app_name">NoDust</string>
    <string name="password">Password</string>
    <string name="UserName">User Name</string>
    <string name="Login">Login</string>
    <string name="CustomerName">Customer Name</string>
    <string name="AssignID">Assignment ID</string>
    <string name="AreaName">Area Name</string>
    <string name="ContractCode">Contract Code</string>
    <string name="ContractID">Contract ID</string>
    <string name="AssignDate">Assign Date</string>
    <string name="CustomerAddress">Customer Address</string>
    <string name="OperationComment">Operation Comment</string>
    <string name="dataComment">Data Comment</string>
    <string name="ShowMore">Show More Details</string>
    <string name="HideDetails">Hide Details</string>
    <string name="Deliver">Deliver</string>
    <string name="NotDeliver">Not Deliver</string>
    <string name="PartialDeliver">Partial Deliver</string>
    <string name="NoDataFound">No Data Found</string>
    <string name="title_activity_home_with_menu">HomeWithMenuActivity</string>
    <string name="ChooseYourLan">Choose Your Language</string>
    <string name="DriveID">Drive ID</string>
    <string name="CardNo">Card No</string>
    <string name="D_r_no">CR_NO </string>
    <string name="errRNo">Please Enter 6 digits!</string>
    <string name="errLogin">Please Make Sure of UserName and Password!</string>
    <!-- Volley Errors MSGs-->
    <string name="NetworkError">Network Error</string>
    <string name="ServerError">Server Error</string>
    <string name="AuthFailureError">Failure in Authentication</string>
    <string name="ParseError">Internal Server Error</string>
    <string name="NoConnectionError">There is no Connection</string>
    <string name="InternetConnection">Internet Connection</string>
    <string name="TimeoutError">Session is timeout</string>
    <string name="error">Error</string>
    <string name="erorrDB">Connection Server Error,Please Try again</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_Tasks">Tasks</string>
    <string name="action_logout">Logout</string>
    <string name="Home">Home</string>
    <string name="ChooseCloseCode">Choose Close Reason</string>
    <string name="Ok">OK</string>
    <string name="CloseCodeReason">Close Reason</string>
    <string name="Comments">Comment</string>
    <string name="DetailsActivity">Contract Details</string>
    <string name="SaveChanges">Save Changes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="msgCloseReason">please Select close Reason!</string>
    <string name="welcome">Welcome</string>
    <string name="StartShift">Start shift</string>
    <string name="EndShift">End Shift</string>
    <string name="EnterCardNum">Enter Card Number.. </string>
    <string name="EnterCustAddr">Enter Customer Address.. </string>
    <string name="EnterCustName">Enter Customer Name.. </string>
    <string name="EnterComments">Enter Comment.. </string>
    <string name="ProductName">Product</string>
    <string name="QuantityRep">QR</string>
    <string name="QuantityNotRep">QNR</string>
    <string name="Replaced">Replaced</string>
    <string name="Price">Price</string>
    <string name="Total">Total Price</string>
    <string name="EGP">EGP</string>
    <string name="FailedSms">Please Try Again</string>
    <string name="Quantity">QTY</string>
    <string name="Products">Product</string>
    <string name="Pilots">Pilot</string>
    <string name="Accept">Accept Cover Products</string>
    <string name="Refuse">Refuse Cover Products</string>
    <string name="PilotName">Pilot Name</string>
    <string name="driverName">driver Name</string>
    <string name="TodayOutput">Today Output</string>
    <string name="NoRecipt">Total ReciptNo</string>
    <string name="Totalamount">Total Amount</string>
    <string name="NotTasks">Not Have Tasks</string>
    <string name="Evalution">Evalution\</string>
    <string name="uniformCode">Uniform Code</string>
    <string name="Hygiene">Hygiene</string>
    <string name="Appearance">Appearance</string>
    <string name="Presentation">Presentation</string>
    <string name="ArrivalinTime">Arrival in Time</string>
    <string name="Send">Send Evalution</string>
    <string name="total_Rec_amount">Please Enter Total Amount and ReciptNo</string>
    <string name="NOAssignment">No of Assigned Contracts</string>
    <string name="NoDone">No of Done</string>
    <string name="NoPartial">No of Partial</string>
    <string name="NoNotDone">No of not Done</string>
    <string name="NoPending">No of Pending Assignments</string>
    <string name="amountMoney">Amount of money </string>
    <string name="QuantityDirty">Quantity Dirty</string>
    <string name="Quantityclean">Quantity Clean</string>
    <string name="ReturnTime">Return Time for driver</string>
    <string name="TimeAttendance">Time Attendance for driver</string>
    <string name="Notes">Notes</string>
    <string name="Comment">Comment</string>
    <string name="ScaleValue">Scale Value</string>
    <string name="Evalution2">Evalution</string>
    <string name="Payment">Payment</string>
    <string name="FullPayment">Deliver with Full Payment?</string>
    <string name="payCash">Payment Suspension ?</string>
    <string name="buyNoMony">Buy Without money ?</string>
    <string name="PressAgain">Press Again To exit</string>
    <string name="NoWeek">No. Weeks</string>
    <string name="treatment">Trt</string>
    <string name="PNO">PNO</string>
    <string name="REGION_NAME">Region Name</string>
    <string name="STREET_NAME">Street Name</string>
    <string name="HOME_NO">Home No.</string>
    <string name="FLOOR_NO">Floor No.</string>
    <string name="FLAT_NO">Flat No.</string>
    <string name="REMARKS">Remarks</string>
    <string name="AREA2_NAME">Area2 Name</string>
    <string name="SelectArea">Please Select Area Name </string>
    <string name="myAreas">My Areas</string>
    <string name="Vacations">Vacation</string>
    <string name="FromDate">From Date</string>
    <string name="ToDate">To Date</string>
    <string name="Reason">Reason</string>
    <string name="FillValue">Fill </string>
    <string name="RequestVacation">Vacation Request</string>
    <string name="errorDate">Please Enter Correct Dates!</string>
    <string name="Status">Status</string>
    <string name="VacationDetails">Vacation Details</string>
    <string name="Waiting">Waiting For Response</string>
    <string name="myTasks">My Orders</string>
    <string name="PilotsOrders">Pilots Orders</string>
    <string name="send">Send</string>
    <string name="VersionNo">VersionNo:</string>
    <string name="ReFresh">Re-Load</string>
    <string name="confirm"> Assign Tasks To Pilots</string>
    <string name="yes">Yes</string>
    <string name="No">No</string>
    <string name="NewOrder">New Orders:</string>
    <string name="FU_Note">FU Note</string>
    <string name="CurrentQuantity">Cur QTY</string>
    <string name="PilotQuantity">Pilot QTY</string>
    <string name="AssignedCoverErr">pls enter Correct Quantity</string>
    <string name="enoughProduct">You don\'t have enough Products</string>
    <string name="addProducts">Add Products</string>
    <string name="ConfirmAdd">Make sure you have assigned all contracts to this pilot</string>
    <string name="EvaluationFirst">Please Take Evaluation First for Pilot</string>
    <string name="enterQuantity"> at Least Enter one Product Quantity for Pilot</string>
    <string name="PilotAccept">Accept Products</string>
    <string name="NeedQuantity">Need QTy</string>
    <string name="CleanQuantity">Clean QTY</string>
    <string name="AddProducts">Add Products</string>
    <string name="Reject">Reject</string>
    <string name="Cancelation">Cancelation</string>
    <string name="Handles">#Handles</string>
    <string name="QTYcancel">QC</string>
    <string name="ActualClean">Pilot QC</string>
    <string name="ActualDirty">Pilot QD</string>
    <string name="ApprovedClean">Driver QC</string>
    <string name="ApprovedDirty">Driver QD</string>
    <string name="DriverAccept">Driver Accept</string>
    <string name="Reconciliation">
        Reconciliation
    </string>
    <string name="Reconcilation">Reconciliation</string>
    <string name="errorQty">pls enter Q</string>
    <string name="pilotQty">pls wait to pilot Reconciliation</string>

    <string name="PilotReconciliation">Pilot Reconciliation</string>
    <string name="DriverReconciliation">Driver Reconciliation</string>
    <string name="ExpClean">ExpClean</string>
    <string name="ExpDirty">ExpDirty</string>
    <string name="ExpCash">Expect Cash</string>
    <string name="PilotCash">Pilot Cash</string>
    <string name="errfillPilotAmount">Fill Pilot Cash</string>
    <string name="errfillDriverAmount">Fill Driver Cash</string>
    <string name="driverCash">Driver Cash</string>
    <string name="ChooseCloseCodeCanecl">Choose Cancelation Reason</string>
    <string name="DirtyQTY">Dirty QTY</string>
    <string name="SuperComments">Supervisor Comment</string>
    <string name="AvailabeDays">Vacations balance</string>
    <string name="noVacation">Vacation Balance Not Allowed To Take Vacation !</string>
    <string name="errVersion">Request Last Version From Your Supervisor!</string>
    <string name="Profile">Profile</string>
    <string name="Loading">Loading</string>
    <string name="Name">Name</string>
    <string name="UserNo">User No.</string>
    <string name="RecieptNo">Reciept No.</string>
    <string name="Counter">Count</string>
    <string name="ChooseStreet">Choose Street</string>
    <string name="Priority">Priority</string>
    <string name="STREETNAME">Street</string>
    <string name="OldPassword">Old Password</string>
    <string name="NewPassword">New Password</string>
    <string name="ReNewPass">Re Type New Password</string>
    <string name="ChangePass">Change Password</string>
    <string name="errEmptyField">Fill this Field !</string>
    <string name="passNotMatch">Password Not Match !</string>
    <string name="errEnterCorrectPassord">The Old Password your have entered is incorrect</string>
    <string name="Payroll">Payroll</string>
    <string name="Complains">Complains</string>
    <string name="FromTime">من الساعه</string>
    <string name="ToTime">الى الساعه</string>
    <string name="Invoice_NO">Invoice_no</string>
    <string name="Amount">Amount</string>
    <string name="Paid">Paid</string>
    <string name="title_activity_routing_map">Map</string>
    <string name="currentloc">Current Location</string>
    <string name="CardLoc">Card Location</string>
    <string name="Routing">Routing</string>
    <string name="date">Date</string>
    <string name="errTablet">Your Tablet is not Register!</string>
    <string name="RepetedCardNo">This Card has Collection and Products</string>
    <string name="CollectionCard">This Card has Products also</string>
    <string name="ProductCard">This Card has Collection also</string>
    <string name="Contactadmin">Contact your admin </string>
    <string name="modifiedQTY">Pilot has modified quantities !</string>

</resources>
