<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="5dp"
    android:paddingRight="2dp"
    android:paddingLeft="2dp"
    android:background="@drawable/table_row_last_bg"
    android:layout_height="wrap_content" android:layout_width="match_parent">
    <LinearLayout  android:layout_width="0dp" android:layout_weight="1"
        android:layout_height="match_parent">
        <TextView  android:text="@string/ProductName"
            android:background="@drawable/table_cell_bg"
            android:layout_width="0dp" android:layout_weight="2"
            android:gravity="center"
            android:layout_height="match_parent"
            android:textColor="@color/colorPrimaryDark"/>
        <TextView  android:text="@string/Quantityclean"
            android:background="@drawable/table_cell_bg"
            android:layout_width="0dp" android:layout_weight="0.9"
            android:gravity="center"
            android:layout_height="match_parent"
            android:textColor="@color/colorPrimaryDark"/>
        <TextView  android:text="@string/QuantityDirty"
            android:background="@drawable/table_cell_bg"
            android:layout_width="0dp" android:layout_weight="0.9"
            android:gravity="center"
            android:layout_height="match_parent"
            android:textColor="@color/colorPrimaryDark"/>
        <TextView  android:text="@string/treatment"
            android:background="@drawable/table_cell_bg"
            android:layout_width="0dp" android:layout_weight="0.9"
            android:gravity="center"
            android:layout_height="match_parent"
            android:textColor="@color/colorPrimaryDark"/>
    </LinearLayout>
</TableRow>