<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:minHeight="200dp" android:minWidth="500dp" android:id="@+id/ll_eval"
    android:padding="5dp" android:layout_height="match_parent" android:background="@drawable/border_red">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <TextView android:id="@+id/tv_pilotName"
        android:layout_width="match_parent"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="normal|bold"
        android:layout_height="wrap_content"
        android:gravity="center" android:text="@string/Evalution"/>
      <LinearLayout
          android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/ll_items">

      </LinearLayout>
<EditText
    android:layout_marginTop="5dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/Notes"
    android:id="@+id/ed_notes"/>
    <Button android:layout_margin="5dp"
        android:layout_width="wrap_content" android:layout_gravity="center"
        android:text="@string/Send" android:textAllCaps="false" android:padding="15dp"
        android:gravity="center"
        android:id="@+id/btn_sendEvalution"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="normal"
        android:background="@drawable/round_border_btn"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>