<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:minHeight="200dp" android:minWidth="500dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:background="@drawable/border_red"
    android:padding="2dp" >
    <android.support.v7.widget.CardView
        android:minHeight="200dp"
        android:minWidth="500dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirm" android:gravity="center"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"/>
            <LinearLayout android:layout_margin="10dp"
                android:layout_width="match_parent" android:orientation="horizontal"
                android:layout_height="wrap_content" android:layout_marginTop="5dp">
                <TextView
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:layout_width="match_parent" android:layout_weight="1"
                    android:layout_height="wrap_content" android:text="@string/NewOrder" />
                <TextView
                    android:id="@+id/ed_totalRecNo"
                    android:inputType= "number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:layout_weight="1"
                    />
            </LinearLayout>
            <LinearLayout android:layout_margin="10dp"
                android:layout_width="match_parent" android:orientation="horizontal"
                android:layout_height="wrap_content" android:layout_marginTop="5dp">
                <TextView android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:layout_width="match_parent" android:layout_weight="1"
                    android:layout_height="wrap_content" android:text="@string/PilotName"/>
                <TextView
                    android:layout_width="match_parent"
                    android:inputType= "number"
                    android:id="@+id/ed_totalAmount"
                    android:layout_height="wrap_content" android:layout_weight="1"
                    />
            </LinearLayout>
            <LinearLayout android:layout_margin="40dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <Button android:layout_weight="1" android:layout_margin="10dp"
                android:layout_width="match_parent" android:layout_gravity="center"
                android:text="@string/yes" android:textAllCaps="false" android:padding="15dp"
                android:gravity="center"
                android:id="@+id/btn_yes"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:background="@drawable/round_border_btn"/>
            <Button android:layout_weight="1" android:layout_margin="10dp"
                android:layout_width="match_parent" android:layout_gravity="center"
                android:text="@string/No" android:textAllCaps="false" android:padding="15dp"
                android:gravity="center"
                android:id="@+id/btn_no"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:background="@drawable/round_border_btn"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>
